--- a/css/pricing.css
+++ b/css/pricing.css
@@ -25,10 +25,7 @@
     transition: 0.3s;
 }
 
-.pricing2 .plan h2 {
-    font-size: 22px;
-    margin-bottom: 12px;
-}
+
 
 .pricing2 .plan .price {
     margin-bottom: 1rem;
