--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,6 @@ body {
 }
 
 
-
 .section {
     min-height: 100vh;
     width: 100%;
@@ -54,3 +53,16 @@ footer {
     margin-top: 20px;
 }
 
+@media screen and (max-width: 800px) {
+    h1 {
+        font-size: 2rem;
+        font-weight: bold;
+    }
+    h2 {
+        font-size: 1.5rem;
+        margin-bottom: 10px;
+    }
+    .section{
+        padding: 20px;
+    }
+}
